# flask-test1

./: .dockerignore  .env.example  .flaskenv  2test.py  3test.py  4test.py  5test.py  Dockerfile  Dockerfile.nginx  MARKDOWN.md  README.md  activity.sqlite  admin copy.sqlite  admin-compose.yaml  admin.sqlite  config.py  default.sqlite  docker-compose.dev.yml  docker-compose.postgres.2.yml  images.txt  images_rem  postgres.docker-compose.yml  postgres.docker-compose_copy.yml  pyproject.toml  rec_to_toml.py  requirements.txt  requirments copy.txt  requirments.txt  requirments1.txt  requirments2.txt  requirments_toml.txt  social_gamification copy.sqlite  social_gamification.sqlite  util.py
admin/: __init__.py
adminproject/: __init__.py  admin_init.py  db.py  faker_test.py  manage.py
adminproject/activity/: model.py  views.py
adminproject/admin/: views.py
db_data/: activity.sqlite  admin.sqlite  default.sqlite  social_gamification.sqlite
docker_postgres/: init-database.sh
flask_basis_out/: README.md
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/templates/: base.html
markdown/: MARKDOWN.md
nginx/development/: nginx.conf
pytest_testing/: test_1.py  test_2.py  test_class1.py  test_fixture1.py
pytest_testing/ch1/: test_1.py
sources/: activity_db.db  activity_db.schema  social_gamification_db(1).db  social_gamification_db(1).schema  Социальный клуб CM.drawio
src/: __init__.py  admin_init.py  db.py  manage.py  views_base.py
src/admin/: controller.py  (+3 more)
start_tests/: 1test.py  3test.py  5test.py  6test.py
tests/: conftest.py  data.sql
(+27 files in other folders)
